# strawberry-and-sugar

./: Cargo.toml  README.md
src/: auth.rs  handlers.rs  main.rs  models.rs  routes.rs
src/handlers/: admin.rs  auth.rs  mod.rs  petitions.rs  posts.rs
