[package]
name = "ferivonizm-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
tokio = { version = "1.49.0", features = ["full"] }
argon2 = "0.5.3"
jsonwebtoken = "10.3.0"
rand = "0.10.0"
validator = { version = "0.20.0", features = ["derive"] }
